--- a/src/stylesheets/asciidoctor.css
+++ b/src/stylesheets/asciidoctor.css
@@ -1081,10 +1081,6 @@ table.tableblock.fit-content > caption.title {
   box-shadow: 0 1px 4px #e0e0dc;
 }
 
-.exampleblock > .content > :first-child {
-  margin-top: 0;
-}
-
 .sidebarblock {
   border: 1px solid #dbdbd6;
   margin-bottom: 1.25em;
